Lab 4 is done